feat: added non-trivial settlement border viewing and BlueMap integration

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,6 +5,7 @@ description: "A lightweight territory management plugin."
 author: Jabberdrake
 website: https://github.com/Jabberdrake/Charter
 api-version: '1.21'
+depend: [BlueMap]
 commands:
   charter:
     description: "The all-purpose command for Charter stuff!"
