--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id("io.github.goooler.shadow") version "8.1.8"
     id("xyz.jpenilla.run-paper") version "2.3.1"
 }
 
@@ -16,10 +17,16 @@ repositories {
         name = "sonatype"
         url = "https://oss.sonatype.org/content/groups/public/"
     }
+    maven {
+        name = "bluemap-api"
+        url = 'https://repo.bluecolored.de/releases'
+    }
 }
 
 dependencies {
+    implementation("com.technicjelle:BMUtils:4.3.1")
     compileOnly("io.papermc.paper:paper-api:1.21.4-R0.1-SNAPSHOT")
+    compileOnly("de.bluecolored:bluemap-api:2.7.3")
 }
 
 def targetJavaVersion = 21
@@ -42,6 +49,9 @@ tasks.withType(JavaCompile).configureEach {
 
 tasks {
     runServer {
+        downloadPlugins {
+            hangar("bluemap", "5.7")
+        }
         minecraftVersion("1.21.4")
     }
 }
