feat: added click type support to menu GUIs and added chunk protection levels

--- a/src/main/resources/settings.yml
+++ b/src/main/resources/settings.yml
@@ -1,6 +1,8 @@
 generic:
   gameworld: world
   database: jade.db
+  chunkCost: 20
 
 gamerules:
   preventCoralFading: true
+  realmProtectionLevel: CONTAINER
