--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'dev.jabberdrake'
-version = '0.8'
+version = '0.9'
 
 repositories {
     mavenCentral()
@@ -52,6 +52,7 @@ tasks {
     runServer {
         downloadPlugins {
             hangar("bluemap", "5.7")
+            hangar("gravebox", "2.0")
         }
         minecraftVersion("1.21.5")
     }
