feat: refactored JadeSettings to JadeConfig

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -6,5 +6,7 @@ generic:
 gamerules:
   preventCoralFading: true
   enablePlayerGraves: true
+  enableSpeedRoads: true
+  sayRandomAdvice: true
 roads:
   - ANY;PACKED_MUD;GRAVEL;2
