fix: changed doMobExplosion to doMonsterGriefing, and made it cover endermen pickup up blocks and zombies breaking down doors

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -8,6 +8,6 @@ gamerules:
   enablePlayerGraves: true
   enableSpeedRoads: true
   sayRandomAdvice: true
-  doMobExplosion: false
+  doMonsterGriefing: false
 roads:
   - ANY;PACKED_MUD;GRAVEL;2
